viele Android SDK fehlermeldungen beseitigt